fix background height issue on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .Home {
-  height: 100%;
+  flex: 1;
   background-image: url('./images/background.jpg');
   background-repeat: repeat;
   background-size: 75rem;
